--- a/app/home/templates/contact_us.html
+++ b/app/home/templates/contact_us.html
@@ -51,18 +51,22 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
             </form>
         </div>
     </div>
-    <div class="col-xs-12 col-sm-6 col-lg-4"><br><br>
+    </div>
+    
+    <div class="col-xs-12 col-sm-6 col-lg-4"> <br><br>
         <div class="box">
             <div class="icon">
                 <div class="image"><i class="fa fa-envelope" aria-hidden="true"></i>
                 </div>
-                <div class="info">
+                <div class="info"> <br>
                     <h3 class="title">MAIL & WEBSITE</h3>
                     <p>
                         <i class="fa fa-envelope" aria-hidden="true"></i> <a
                             href="mailto:pk.ugyenacademy@education.gov.bt"> &nbsp pk.ugyenacademy@education.gov.bt </a>
-                        <br>
-                        <br>
+                        <br><br>
+                        <i class="fa fa-facebook" aria-hidden="true"></i> <a href="https://www.facebook.com/groups/42276304044"> &nbsp
+                            www.facebook.com</a>
+                        <br><br>
                         <i class="fa fa-globe" aria-hidden="true"></i> <a href="https://www.ugyenacademy.edu.bt/"> &nbsp
                             www.ugyenacademy.edu.bt</a>
                     </p>
@@ -72,10 +76,10 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
     </div>
     <div class="col-xs-12 col-sm-6 col-lg-4"><br><br>
         <div class="box">
-            <div class="icon">
+            <div class="icon"> 
                 <div class="image"><i class="fa fa-mobile" aria-hidden="true"></i>
                 </div>
-                <div class="info">
+                <div class="info"> <br>
                     <h3 class="title">CONTACT US</h3>
                     <p>
                         <i class="fa fa-mobile" aria-hidden="true"></i> &nbsp Vice Principal (Lower Division)
@@ -92,23 +96,22 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
             </div>
         </div>
     </div>
-    <div class="col-xs-12 col-sm-6 col-lg-4"><br><br>
+    <div class="col-xs-12 col-sm-6 col-lg-4"> <br><br>
         <div class="box">
-            <div class="icon">
+            <div class="icon"> 
                 <div class="image"><i class="fa fa-map-marker" aria-hidden="true"></i>
                 </div>
-                <div class="info">
+                <div class="info"> <br>
                     <h3 class="title">ADDRESS</h3>
-                    <p><i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp Ugyen Academy <br>
+                    <p><i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp Ugyen Academy <br><br>
                         Khuruthang <br>
-                        Punakha <br>
-                        Bhutan
+                    <p>Punakha : Bhutan</p>
                     </p>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</div> 
 </div>
 {% endblock content %}
 
