--- a/app/class_teacher/templates/pages/add-student/view_std_mark.html
+++ b/app/class_teacher/templates/pages/add-student/view_std_mark.html
@@ -30,7 +30,7 @@
                                 <li class="nav-item">
                                     <hr class="horizontal2"/>
                                     <a class="nav-link active btn btn-primary" data-toggle="pill"
-                                        href="#studentDetai2">Student Detail</a>
+                                        href="#studentDetail">Student Detail</a>
                                 </li>
                                 <li class="nav-item">
                                     <hr class="horizontal2"/>
@@ -132,13 +132,42 @@
                                         </div>
                                     </div>
                                 </div>
+                                <!-- Table Display -->
                                 <div id="teacher_remarks" class="container tab-pane fade">
-                                    <p><b>Punctuality:</b> {{sub_teacher.punctuality}}</p>
-                                    <p><b>Discipline:</b> {{sub_teacher.discipline}}</p>
-                                    <p><b>Social Service:</b> {{sub_teacher.social_service}}</p>
-                                    <p><b>Leadership Quality:</b> {{sub_teacher.leadership_quality}}</p>
+                                    <table class="table table-bordered">
+                                        <thead>
+                                            <tr>
+                                                <th>sl</th>
+                                                <th>Personal Qualities</th>
+                                                <th>Rating</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>1</td>
+                                                <td>Punctuality</td>
+                                                <td>{{sub_teacher.punctuality}}</td>
+                                                
+                                            </tr>
+                                            <tr>
+                                                <td>2</td>
+                                                <td>Discipline</td>
+                                                <td>{{sub_teacher.discipline}}</td>
+                                            </tr>
+                                            <tr>
+                                                <td>3</td>
+                                                <td>Social Service</td>
+                                                <td>{{sub_teacher.social_service}}</td>
+                                            </tr> 
+                                            <tr>
+                                                <td>4</td>
+                                                <td>Leadership Quality</td>
+                                                <td> {{sub_teacher.leadership_quality}}</td>
+                                                
+                                            </tr>                                       
+                                        </tbody>
+                                    </table>
                                 </div>
-
                             </div>
                         </div>
                     </div>
