--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -89,205 +89,209 @@
 
 		<h2 class="text-center top-space">NATIONAL AWARDS</h2>
 		<hr>
+				<div class="row cous">
+					<div class="col-sm-6">
+						<div class="slider-border">
+						  <div id="myCarousel" class="carousel slide" class="slider-border" data-ride="carousel">
+							<!-- Indicators -->
+							<ol class="carousel-indicators">
+							<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+							<li data-target="#myCarousel" data-slide-to="1"></li>
+							<li data-target="#myCarousel" data-slide-to="2"></li>
+							<li data-target="#myCarousel" data-slide-to="3"></li>
+							<li data-target="#myCarousel" data-slide-to="4"></li>
+							<li data-target="#myCarousel" data-slide-to="5"></li>
+							<li data-target="#myCarousel" data-slide-to="6"></li>
+							<li data-target="#myCarousel" data-slide-to="7"></li>
+							<li data-target="#myCarousel" data-slide-to="8"></li>
+							<li data-target="#myCarousel" data-slide-to="9"></li>
+							<li data-target="#myCarousel" data-slide-to="10"></li>
+							<li data-target="#myCarousel" data-slide-to="11"></li>
+							<li data-target="#myCarousel" data-slide-to="12"></li>
+							<li data-target="#myCarousel" data-slide-to="13"></li>
+							<li data-target="#myCarousel" data-slide-to="14"></li>
 
-		<div class="row cous">
-			<div class="col-sm-6">
-				<div id="myCarousel" class="carousel slide" data-ride="carousel">
-					<!-- Indicators -->
-					<ol class="carousel-indicators">
-					  <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-					  <li data-target="#myCarousel" data-slide-to="1"></li>
-					  <li data-target="#myCarousel" data-slide-to="2"></li>
-					  <li data-target="#myCarousel" data-slide-to="3"></li>
-					  <li data-target="#myCarousel" data-slide-to="4"></li>
-					  <li data-target="#myCarousel" data-slide-to="5"></li>
-					  <li data-target="#myCarousel" data-slide-to="6"></li>
-					  <li data-target="#myCarousel" data-slide-to="7"></li>
-					  <li data-target="#myCarousel" data-slide-to="8"></li>
-					  <li data-target="#myCarousel" data-slide-to="9"></li>
-					  <li data-target="#myCarousel" data-slide-to="10"></li>
-					  <li data-target="#myCarousel" data-slide-to="11"></li>
-					  <li data-target="#myCarousel" data-slide-to="12"></li>
-					  <li data-target="#myCarousel" data-slide-to="13"></li>
-					  <li data-target="#myCarousel" data-slide-to="14"></li>
-
-					</ol>
-				
-					<!-- Wrapper for slides -->
-					<div class="carousel-inner">
-					  <div class="item active">
-						<img src="../static/images/ua4.png"  style="width:100%; height:400px;">
-						<div class="carousel-caption">
-						  <h3>Academic Rewards</h3>
-						  <p>Top ten schools in overall performance for the year 2016 at the Higher Secondary Levels (Class XII)</p>
-						</div>
-					  </div>
-				
-					  <div class="item">
-						<img src="../static/images/ua45.png" alt="Chicago" style="width:100%; height:400px;">
-						<div class="carousel-caption">
-						  <h3>Academic Rewards</h3>
-						  <p>Top ten schools in overall performance for the year 2016 at the Middle Secondary Level (Class X)
-
-						</p>
-						</div>
-					  </div>
-
-					  <div class="item">
-						  <img src="../static/images/ua6.png" alt="Chicago" style="width:100%; height:400px;">
-						  <div class="carousel-caption">
-							<h3>Academic Rewards</h3>
-							<p>Top ten school in overall performance for the year 2015 at the Middle Secondary Level (Class X)
-
-							</p>
-						  </div>
-						</div>
-						<div class="item">
-							<img src="../static/images/ua7.png" alt="Chicago" style="width:100%; height:400px;">
-							<div class="carousel-caption">
-							  <h3>Academic Rewards</h3>
-							  <p>Top ten school in overall performance for the year 2015 at the Higher Secondary Level (Class XII)
-
-							</p>
-							</div>
-						  </div>
-	
-						  <div class="item">
-							  <img src="../static/images/ua8.png" alt="Chicago" style="width:100%; height:400px;">
-							  <div class="carousel-caption">
-								<h3>Academic Rewards</h3>
-								<p>Top ten school in overall performance for the year 2014 at the Middle Secondary Level (Class X)</p>
-							  </div>
-							</div>
-							<div class="item">
-								<img src="../static/images/ua9.png" alt="Chicago" style="width:100%; height:400px;">
+							</ol>
+						
+							<!-- Wrapper for slides -->
+							<div class="carousel-inner">
+							<div class="item active">
+								<img src="../static/images/ua4.png"  style="width:100%; height:400px;">
 								<div class="carousel-caption">
-								  <h3>Academic Rewards</h3>
-								  <p>Top ten school in overall performance for the year 2014 at the Higher Secondary Level (Class XII)
+								<h3>Academic Rewards</h3>
+								<p>Top ten schools in overall performance for the year 2016 at the Higher Secondary Levels (Class XII)</p>
+								</div>
+							</div>
+						
+							<div class="item">
+								<img src="../static/images/ua45.png" alt="Chicago" style="width:100%; height:400px;">
+								<div class="carousel-caption">
+								<h3>Academic Rewards</h3>
+								<p>Top ten schools in overall performance for the year 2016 at the Middle Secondary Level (Class X)
 
 								</p>
 								</div>
-							  </div>
-		
-							  <div class="item">
-								  <img src="../static/images/ua10.png" alt="Chicago" style="width:100%; height:400px;">
-								  <div class="carousel-caption">
+							</div>
+
+							<div class="item">
+								<img src="../static/images/ua6.png" alt="Chicago" style="width:100%; height:400px;">
+								<div class="carousel-caption">
 									<h3>Academic Rewards</h3>
-									<p>Top ten school in overall performance for the year 2013 at the Middle Secondary Level (Class X)
+									<p>Top ten school in overall performance for the year 2015 at the Middle Secondary Level (Class X)
+
 									</p>
-								  </div>
+								</div>
 								</div>
 								<div class="item">
-									<img src="../static/images/ua11.png" alt="Chicago" style="width:100%; height:400px;">
+									<img src="../static/images/ua7.png" alt="Chicago" style="width:100%; height:400px;">
 									<div class="carousel-caption">
-									  <h3>Academic Rewards</h3>
-									  <p>Top ten school in overall performance for the year 2013 at the Higher Secondary Level (Class XII)</p>
+									<h3>Academic Rewards</h3>
+									<p>Top ten school in overall performance for the year 2015 at the Higher Secondary Level (Class XII)
+
+									</p>
 									</div>
-								  </div>
+								</div>
 			
-								  <div class="item">
-									  <img src="../static/images/ua12.png" alt="Chicago" style="width:100%; height:400px;">
-									  <div class="carousel-caption">
+								<div class="item">
+									<img src="../static/images/ua8.png" alt="Chicago" style="width:100%; height:400px;">
+									<div class="carousel-caption">
 										<h3>Academic Rewards</h3>
-										<p>Top ten school in overall performance for the year 2012 at the Higher Secondary Level (Class XII)</p>
-									  </div>
+										<p>Top ten school in overall performance for the year 2014 at the Middle Secondary Level (Class X)</p>
+									</div>
 									</div>
 									<div class="item">
-										<img src="../static/images/ua13.png" alt="Chicago" style="width:100%; height:400px;">
+										<img src="../static/images/ua9.png" alt="Chicago" style="width:100%; height:400px;">
 										<div class="carousel-caption">
-										  <h3>Academic Rewards</h3>
-										  <p>Top ten school in overall performance for the year 2012 at the Middle Secondary Level (Class X)</p>
-										</div>
-									  </div>
-				
-									  <div class="item">
-										  <img src="../static/images/ua14.png" alt="Chicago" style="width:100%; height:400px;">
-										  <div class="carousel-caption">
-											<h3>Academic Rewards</h3>
-											<p>Top ten school in overall performance for the year 2011 at the Middle Secondary Level (Class X)
+										<h3>Academic Rewards</h3>
+										<p>Top ten school in overall performance for the year 2014 at the Higher Secondary Level (Class XII)
 
+										</p>
+										</div>
+									</div>
+				
+									<div class="item">
+										<img src="../static/images/ua10.png" alt="Chicago" style="width:100%; height:400px;">
+										<div class="carousel-caption">
+											<h3>Academic Rewards</h3>
+											<p>Top ten school in overall performance for the year 2013 at the Middle Secondary Level (Class X)
 											</p>
-										  </div>
+										</div>
 										</div>
 										<div class="item">
-											<img src="../static/images/ua15.png" alt="Chicago" style="width:100%; height:400px;">
+											<img src="../static/images/ua11.png" alt="Chicago" style="width:100%; height:400px;">
 											<div class="carousel-caption">
-											  <h3>Academic Rewards</h3>
-											  <p>Top ten school in overall performance for the year 2011 at the Higher Secondary Level (Class XII)</p>
+											<h3>Academic Rewards</h3>
+											<p>Top ten school in overall performance for the year 2013 at the Higher Secondary Level (Class XII)</p>
 											</div>
-										  </div>
-										  <div class="item">
-											  <img src="../static/images/ua16.png" alt="Chicago" style="width:100%; height:400px;">
-											  <div class="carousel-caption">
-												<h3>Academic Rewards</h3>
-												<p>Top ten school in overall performance for the year 2010 at the Middle Secondary Level (Class X)
-
-												</p>
-											  </div>
-											</div>
-					  
-											<div class="item">
-												<img src="../static/images/ua17.png" alt="Chicago" style="width:100%; height:400px;">
-												<div class="carousel-caption-info">
-												  <h3>Academic Rewards</h3>
-												  <p>Top ten school in overall performance for the year 2010 at the Higher Secondary Level (Class XII)</p>
-												</div>
-											  </div>
-					  <div class="item">
-						<img src="../static/images/ua18.png" alt="New York" style="width:100%;height:400px;">
-						<div class="carousel-caption">
-						  <h3>Academic Rewards</h3>
-						  <p>Top ten school in overall performance for the year 209 at the Middle Secondary Level (Class X)
-
-						</p>
-						</div>
-					  </div>
-				  
-					</div>
-				
-					<!-- Left and right controls -->
+										</div>
 					
-				  </div>
+										<div class="item">
+											<img src="../static/images/ua12.png" alt="Chicago" style="width:100%; height:400px;">
+											<div class="carousel-caption">
+												<h3>Academic Rewards</h3>
+												<p>Top ten school in overall performance for the year 2012 at the Higher Secondary Level (Class XII)</p>
+											</div>
+											</div>
+											<div class="item">
+												<img src="../static/images/ua13.png" alt="Chicago" style="width:100%; height:400px;">
+												<div class="carousel-caption">
+												<h3>Academic Rewards</h3>
+												<p>Top ten school in overall performance for the year 2012 at the Middle Secondary Level (Class X)</p>
+												</div>
+											</div>
+						
+											<div class="item">
+												<img src="../static/images/ua14.png" alt="Chicago" style="width:100%; height:400px;">
+												<div class="carousel-caption">
+													<h3>Academic Rewards</h3>
+													<p>Top ten school in overall performance for the year 2011 at the Middle Secondary Level (Class X)
 
-			</div>
-			<div class="col-sm-6">
-					<div id="myCarousel" class="carousel slide" data-ride="carousel">
-					  <!-- Indicators -->
-					  <ol class="carousel-indicators">
-						<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-						<li data-target="#myCarousel" data-slide-to="1"></li>
-						<li data-target="#myCarousel" data-slide-to="2"></li>
-					  </ol>
-				  
-					  <!-- Wrapper for slides -->
-					  <div class="carousel-inner">
-						<div class="item active">
-						  <img src="../static/images/ua1.png"  style="width:100%; height:400px;">
-						  <div class="carousel-caption">
-							<h3>Games and Sports</h3>
-							<p>Winner in Boys Football event during the National School Football and Traditional Archery Tournament for HSS</p>
-						  </div>
-						</div>
-				  
-						<div class="item">
-						  <img src="../static/images/ua2.png" alt="Chicago" style="width:100%; height:400px;">
-						  <div class="carousel-caption">
-							<h3>Games and Sports</h3>
-							<p>Winner in Boys Volley ball event during the 14th National School Games</p>
-						  </div>
-						</div>
+													</p>
+												</div>
+												</div>
+												<div class="item">
+													<img src="../static/images/ua15.png" alt="Chicago" style="width:100%; height:400px;">
+													<div class="carousel-caption">
+													<h3>Academic Rewards</h3>
+													<p>Top ten school in overall performance for the year 2011 at the Higher Secondary Level (Class XII)</p>
+													</div>
+												</div>
+												<div class="item">
+													<img src="../static/images/ua16.png" alt="Chicago" style="width:100%; height:400px;">
+													<div class="carousel-caption">
+														<h3>Academic Rewards</h3>
+														<p>Top ten school in overall performance for the year 2010 at the Middle Secondary Level (Class X)
 
-						<div class="item">
-							<img src="../static/images/ua3.png" alt="Chicago" style="width:100%; height:400px;">
-							<div class="carousel-caption">
-							  <h3>Games and Sports</h3>
-							  <p>Winner in Boys Basketball event during 14th National School Games</p>
+														</p>
+													</div>
+													</div>
+							
+													<div class="item">
+														<img src="../static/images/ua17.png" alt="Chicago" style="width:100%; height:400px;">
+														<div class="carousel-caption-info">
+														<h3>Academic Rewards</h3>
+														<p>Top ten school in overall performance for the year 2010 at the Higher Secondary Level (Class XII)</p>
+														</div>
+													</div>
+							<div class="item">
+								<img src="../static/images/ua18.png" alt="New York" style="width:100%;height:400px;">
+								<div class="carousel-caption">
+								<h3>Academic Rewards</h3>
+								<p>Top ten school in overall performance for the year 209 at the Middle Secondary Level (Class X)
+
+								</p>
+								</div>
+							</div>
+						
 							</div>
 						  </div>
-				  </div>
-				</div>
-				</div>
-		</div> <!-- /row -->
+						
+							<!-- Left and right controls -->
+							
+						</div>
+
+					</div>
+					<div class="col-sm-6">
+						<div class="slider-border">
+							<div id="myCarousel" class="carousel slide" data-ride="carousel">
+							<!-- Indicators -->
+							<ol class="carousel-indicators">
+								<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+								<li data-target="#myCarousel" data-slide-to="1"></li>
+								<li data-target="#myCarousel" data-slide-to="2"></li>
+							</ol>
+						
+							<!-- Wrapper for slides -->
+							<div class="carousel-inner">
+								<div class="item active">
+								<img src="../static/images/ua1.png"  style="width:100%; height:400px;">
+								<div class="carousel-caption">
+									<h3>Games and Sports</h3>
+									<p>Winner in Boys Football event during the National School Football and Traditional Archery Tournament for HSS</p>
+								</div>
+								</div>
+						
+								<div class="item">
+								<img src="../static/images/ua2.png" alt="Chicago" style="width:100%; height:400px;">
+								<div class="carousel-caption">
+									<h3>Games and Sports</h3>
+									<p>Winner in Boys Volley ball event during the 14th National School Games</p>
+								</div>
+								</div>
+
+								<div class="item">
+									<img src="../static/images/ua3.png" alt="Chicago" style="width:100%; height:400px;">
+									<div class="carousel-caption">
+									<h3>Games and Sports</h3>
+									<p>Winner in Boys Basketball event during 14th National School Games</p>
+									</div>
+								</div>
+							</div>
+							</div>	
+						</div>
+						</div>
+				</div> 
+		
 
 		<div class="jumbotron top-space">
 			<h4><b>PRINCIPAL'S MESSAGE :</b></h4>
@@ -320,7 +324,6 @@
 				Read more »
 			  </a>
   		</div>
-
 </div>	
 
 
@@ -331,7 +334,6 @@
 {% endblock javascripts %}
 
 
-	
 
 
 
