--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -25,7 +25,7 @@
 	<br> <br>
 	<h2 class="thin">VISION & MISSION</h2>
 	<p class="text-muted">
-		TIn the present milieu with erosion of values and lowering of standards in most institutions, UA stands out as a
+		In the present milieu with erosion of values and lowering of standards in most institutions, UA stands out as a
 		school with strong value system and a code of conduct and discipline, which is based on mutual respect. We
 		uphold our founder’s vision and stress on total development – head, hand and heart. We are deeply committed in
 		instilling in our students, positive traits like self discipline and social harmony that will lead to Gross
@@ -38,7 +38,6 @@
 <!-- Highlights - jumbotron -->
 <div class="jumbotron top-space">
 	<div class="container">
-
 		<h2 class="text-center top-space">NATIONAL AWARDS</h2>
 		<hr>
 				<div class="row cous">
@@ -78,10 +77,9 @@
 							<div class="item">
 								<img src="../static/images/ua45.png" alt="Chicago" style="width:100%; height:400px;">
 								<div class="carousel-caption">
-								<h3>Academic Rewards</h3>
-								<p>Top ten schools in overall performance for the year 2016 at the Middle Secondary Level (Class X)
-
-								</p>
+									<h3>Academic Rewards</h3>
+									<p>Top ten schools in overall performance for the year 2016 at the Middle Secondary Level (Class X)
+									</p>
 								</div>
 							</div>
 
@@ -278,37 +276,6 @@
   		</div>
 </div>	
 
-				Please bear with us for the slight delay in the re-opening dates for classes VII to X (Lower Division);
-				we had no choice but to plan it that way so that all our students below 11 years are also fully
-				vaccinated – mainly in class VII. Of course, we will be conducting Zoom Meetings to provide an
-				opportunity for students/parents/guardians to share and reflect on UA’s culture and climate and beyond.
-				<br><br>
-				Additionally, it will be unbecoming on my part as a school leader not to commend our class X and XII
-				teachers who have had hardly any break in both 2020 and 2021 academic sessions. As seasoned
-				professionals, our teachers have sportingly endured the mental stress and physical hardships associated
-				with coming into “self-containment mode” of operation for close to two months. <br><br>
-				Even, amid the extraordinary challenges of the past two years, UA teachers have been innovative,
-				flexible, and brave. But in many cases, they've also been pushed to their limits — leading to fears of
-				them wanting to quit the profession. Undoubtedly, coping with uncertainty is always the greatest
-				challenge. Yet, they chose to cling on because they love the “teaching profession”.
-				<br><br>
-				Again, with the highest number of (appearing the BCSE - Class X and BHSEC - Class XII) students in
-				“self-containment mode” of operation in the country, UA Family members had the adaptability to move
-				forward successfully, especially in times of great change or transformation. Yes, we have been all
-				positive, proactive in adapting, adopting managing the complex and stress-filled situations.
-				My hats off to our supportive parents/guardians, resilient teachers, and disciplined students for the
-				commendable finish to academic session 2021. At the same time we all look forward to a happier and safe
-				2022 academic session.
-				<br><br>
-				Warmest regards to all
-				<br><br>
-			</div>
-		</div>
-		<a class="btn btn-primary btn-action " data-bs-toggle="collapse" href="#collapseExample" role="button"
-			aria-expanded="false" aria-controls="collapseExample">
-			Read more »
-		</a>
-	</div>
 
 </div>
 
