--- a/app/class_teacher/templates/pages/add-student/view_std_mark.html
+++ b/app/class_teacher/templates/pages/add-student/view_std_mark.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.css"
     type="text/css" />
+    
 {% endblock stylesheets %}
 
 {% block content %}
@@ -21,7 +22,9 @@
             <div class="col-12 grid-margin stretch-card">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Student Individual Assesment</h4>
+                        <h4 class="card-title"><a href="/view-std-detail/{{ sub_teacher.student_id }} " style="text-decoration: none;"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-return-left" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z"/>
+                          </svg>Back </a>/ Individual Student Assesment</h4>
                         <hr>
 
                         <div class="pos-rel">
@@ -163,6 +166,18 @@
                                                 <td>4</td>
                                                 <td>Leadership Quality</td>
                                                 <td> {{sub_teacher.leadership_quality}}</td>
+                                                
+                                            </tr>
+                                            <tr>
+                                                <td>5</td>
+                                                <td>Supw Grade</td>
+                                                <td> {{sub_teacher.supw_grade}}</td>
+                                                
+                                            </tr>
+                                            <tr>
+                                                <td>6</td>
+                                                <td>Status</td>
+                                                <td> {{sub_teacher.status_remarks}}</td>
                                                 
                                             </tr>                                       
                                         </tbody>
