--- a/app/home/templates/layouts/main.html
+++ b/app/home/templates/layouts/main.html
@@ -165,7 +165,7 @@
 	</div>
 </body>
 <!-- Specific JS goes HERE -->
-{% block javascripts %}
+{% block javascripts %}{% endblock javascripts %}
 <!-- JavaScript libs are placed at the end of the document so the pages load faster -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
@@ -173,7 +173,7 @@
 <script src="../static/js/jQuery.headroom.min.js"></script>
 <script src="../static/js/template.js"></script>
 
-{% endblock javascripts %}
+
 <script>
 	var myVar;
 	function myFunction() {
