--- a/app/class_teacher/templates/pages/add-student/view_std_mark.html
+++ b/app/class_teacher/templates/pages/add-student/view_std_mark.html
@@ -15,7 +15,9 @@
 {% endblock stylesheets %}
 
 {% block content %}
-
+<body>
+    
+</body>
 <div class="main-panel">
     <div class="content-wrapper">
         <div class="row">
