--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -21,18 +21,21 @@
 <!-- /Header -->
 
 <!-- Intro -->
-<div class="container text-center">
-	<br> <br>
-	<h2 class="thin">VISION & MISSION</h2>
-	<p class="text-muted">
-		In the present milieu with erosion of values and lowering of standards in most institutions, UA stands out as a
-		school with strong value system and a code of conduct and discipline, which is based on mutual respect. We
-		uphold our founder’s vision and stress on total development – head, hand and heart. We are deeply committed in
-		instilling in our students, positive traits like self discipline and social harmony that will lead to Gross
-		National Happiness and Global Peace. Our school motto, “Be Your Best” makes every individual be his or her own
-		competitor. In the end we aspire for developing a good human being.
-	</p>
-</div>
+<section id="about">
+	<div class="container text-center">
+		<br> <br>
+		<h2 class="thin">VISION & MISSION</h2>
+		<p class="text-muted">
+			In the present milieu with erosion of values and lowering of standards in most institutions, UA stands out as a
+			school with strong value system and a code of conduct and discipline, which is based on mutual respect. We
+			uphold our founder’s vision and stress on total development – head, hand and heart. We are deeply committed in
+			instilling in our students, positive traits like self discipline and social harmony that will lead to Gross
+			National Happiness and Global Peace. Our school motto, “Be Your Best” makes every individual be his or her own
+			competitor. In the end we aspire for developing a good human being.
+		</p>
+	</div>
+</section>
+
 <!-- /Intro-->
 
 <!-- Highlights - jumbotron -->
@@ -274,10 +277,10 @@
 				Read more »
 			  </a>
   		</div>
- </div>	
-
-
+  </div>	
 </div>
+
+ 
 
 {% endblock content %}
 <!-- Specific JS goes HERE -->
