--- a/app/home/templates/partials/_navbarhome.html
+++ b/app/home/templates/partials/_navbarhome.html
@@ -8,8 +8,8 @@
 			</div>
 			<div class="navbar-collapse collapse" id="mynavbar">
 				<ul class="nav navbar-nav pull-right">
-					<li class="active"><a href="#">Home</a></li>
-					<li><a href="about.html">About Us</a></li>
+					<li class=" active"><a href="#">Home</a></li>
+					<li><a class="scrollto" href="#about">About Us</a></li>
 					<li><a href="{{url_for('home_blueprint.studentFee')}}">Student Fees</a></li>
 					<li><a href="{{url_for('home_blueprint.trackapplication')}}">Track Student</a></li>
 					<li><a href="{{url_for('home_blueprint.contact')}}">Contact Us</a></li>
